<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="widget"
            type="com.example.weatherapp.network.Daily" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="16dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/day_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_bold"
                app:dateShortFormatted="@{widget.dt}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@tools:sample/date/mmddyy" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto"
                android:text="@string/weather"
                android:textAlignment="center"
                android:textAllCaps="true"
                app:layout_constraintEnd_toStartOf="@+id/textView3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/day_date" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/feels"
                android:textAlignment="center"
                android:textAllCaps="true"
                app:layout_constraintBottom_toBottomOf="@+id/textView2"
                app:layout_constraintEnd_toStartOf="@+id/textView4"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="@+id/textView2"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/humidity"
                android:textAlignment="center"
                android:textAllCaps="true"
                app:layout_constraintBottom_toBottomOf="@+id/textView3"
                app:layout_constraintEnd_toStartOf="@+id/textView5"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/pressure"
                android:textAlignment="center"
                android:textAllCaps="true"
                app:layout_constraintBottom_toBottomOf="@+id/textView4"
                app:layout_constraintEnd_toStartOf="@+id/textView6"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="81dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/wind"
                android:textAlignment="center"
                android:textAllCaps="true"
                app:layout_constraintBottom_toBottomOf="@+id/textView5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="@+id/textView5" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:srcCompat="@drawable/weather"
                android:contentDescription="@string/weather" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="@+id/imageView"
                app:srcCompat="@drawable/feels"
                android:contentDescription="@string/feels" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintEnd_toEndOf="@+id/textView4"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="@+id/imageView2"
                app:srcCompat="@drawable/humidity"
                android:contentDescription="@string/humidity" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                app:layout_constraintEnd_toEndOf="@+id/textView5"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="@+id/imageView3"
                app:srcCompat="@drawable/pressure"
                android:contentDescription="@string/pressure" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                app:layout_constraintEnd_toEndOf="@+id/textView6"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toTopOf="@+id/imageView4"
                app:srcCompat="@drawable/wind"
                android:contentDescription="@string/wind" />

            <TextView
                android:id="@+id/day_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto_bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:temperatureFormatted="@{widget.temp.day}"
                tools:text="@tools:sample/us_zipcodes" />

            <TextView
                android:id="@+id/day_feels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                app:layout_constraintBottom_toBottomOf="@+id/day_temp"
                app:layout_constraintEnd_toEndOf="@+id/imageView2"
                app:layout_constraintStart_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="@+id/day_temp"
                app:temperatureFormatted="@{widget.feels_like.day}"
                tools:text="@tools:sample/us_zipcodes" />

            <TextView
                android:id="@+id/day_dumidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                app:humidityFormatted="@{widget.humidity}"
                app:layout_constraintBottom_toBottomOf="@+id/day_feels"
                app:layout_constraintEnd_toEndOf="@+id/imageView3"
                app:layout_constraintStart_toStartOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="@+id/day_feels"
                tools:text="@tools:sample/us_zipcodes" />

            <TextView
                android:id="@+id/day_pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                app:pressureFormatted="@{widget.pressure}"
                app:layout_constraintBottom_toBottomOf="@+id/day_dumidity"
                app:layout_constraintEnd_toEndOf="@+id/imageView4"
                app:layout_constraintStart_toStartOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="@+id/day_dumidity"
                tools:text="@tools:sample/us_zipcodes" />

            <TextView
                android:id="@+id/day_wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                app:windSpeedFormatted="@{widget.wind_speed}"
                app:layout_constraintBottom_toBottomOf="@+id/day_pressure"
                app:layout_constraintEnd_toEndOf="@+id/imageView5"
                app:layout_constraintStart_toStartOf="@+id/imageView5"
                app:layout_constraintTop_toTopOf="@+id/day_pressure"
                tools:text="@tools:sample/us_zipcodes" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>